[package]
name = "exchange"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchange"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.8.0"
anchor-spl = "0.8.0"
banksy = { version = "0.1.0", path = "../banksy", features = [ "no-entrypoint" ]}